--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ DigiPen_CS529/Debug/DigiPen_CS529.tlog/link.write.1.tlog
 DigiPen_CS529/Debug/stdafx.obj
 DigiPen_CS529/Debug/vc140.idb
 DigiPen_CS529/Debug/vc140.pdb
+/DigiPen_CS529/DigiPen_CS529.vcxproj
+/DigiPen_CS529/ReadMe.txt
+/DigiPen_CS529/DigiPen_CS529.vcxproj.filters
